# pynotebooklm

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  coverage.json  coverage_fresh.json  decisions.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  plan.md  pynotebooklm.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
advanced_usage/: index.html
api_reference/: index.html
architecture/: index.html
competitor_analysis/: index.html
contributing/: index.html
decisions/: index.html
docs/: advanced_usage.md  api_reference.md  architecture.md  competitor_analysis.md  contributing.md  decisions.md  examples.md  faq.md  implementation_plan.md  index.md  internal_protocol.md  quickstart.md  reverse_engineering.md  reverse_engineering_findings.md  rpc_harvesting.md  technical_deep_dives.md  tools.md  usage.md
examples/: 01_basic_usage.py  02_research_workflow.py  03_content_generation.py  04_study_tools.py  05_mind_maps.py  06_batch_operations.py  07_error_handling.py  README.md  index.html
faq/: index.html
implementation_plan/: index.html
internal_protocol/: index.html
quickstart/: index.html
reverse_engineering_findings/: index.html
rpc_harvesting/: index.html
scripts/: README.md  bump_version.py  check_coverage.py  validate_links.py
scripts/automation/: README.md  backup_notebooks.py  cleanup_old_artifacts.py  content_batch_generator.py  research_pipeline.py
search/: search_index.json
src/pynotebooklm/: __init__.py  __main__.py  api.py  auth.py  chat.py  cli.py  client.py  content.py  exceptions.py  mindmaps.py  models.py  notebooks.py  research.py  retry.py  session.py  sources.py  study.py
technical_deep_dives/: index.html
tests/: __init__.py
tests/fixtures/: __init__.py  mock_cookies.json  mock_rpc_responses.py
tests/integration/: __init__.py  test_chat.py  test_mindmaps.py  test_notebooks.py  test_reliability.py  test_research.py  test_sources.py
tests/unit/: __init__.py  test_api.py  test_auth.py  test_auth_async.py  test_chat_unit.py  test_cli.py  test_cli_content.py  test_cli_extra.py  test_cli_mindmap.py  test_cli_query.py  test_cli_research.py  test_cli_study.py  test_client.py  test_content.py  test_exceptions.py  test_main.py  test_models.py  test_retry.py  test_session.py  test_session_async.py  test_session_raw.py  test_sources.py  test_study.py
tools/: index.html
usage/: index.html
