[tool.poetry]
name = "pynotebooklm"
version = "0.19.0"
description = "Production-grade Python library for NotebookLM automation with 31 tools"
authors = ["Victor"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pynotebooklm", from = "src"}]
keywords = ["notebooklm", "google", "automation", "podcast", "ai", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.49.0"
pydantic = "^2.0"
httpx = "^0.28.0"
typer = "^0.15.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
black = "^24.0.0"
isort = "^5.13.0"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
mkdocs-autorefs = "^1.4.3"

[tool.poetry.scripts]
pynotebooklm = "pynotebooklm.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pynotebooklm"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["src/pynotebooklm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']

# isort configuration
[tool.isort]
profile = "black"
known_first_party = ["pynotebooklm"]
